--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p>A collection of recipes curated by Xila.
-            Many of these are gaming/pop culture related. 
+        <p>A collection of recipes curated by Xila.</p>
+            <p>These are all related to <em>World of Warcraft</em>. I hope you enjoy! 
         </p>
+        <img src="images/wow.jpg" width="500" alt="World of Warcraft Cookbook opened on Conjured Mana Strudel page">
         <ul>
             <li><a href="recipes/brownies.html">Dalaran Brownies</a></li>
             <li><a href="recipes/strudel.html">Conjured Mana Strudel</a></li>
