--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div>
         <h1>Odin Recipes</h1>
         <p>A collection of recipes curated by Xila.</p>
-            <p>These are all related to <em>World of Warcraft</em>. I hope you enjoy! 
-        </p>
-        <img src="images/wow.jpg" width="500" alt="World of Warcraft Cookbook opened on Conjured Mana Strudel page">
+            <p>These are all related to <em>World of Warcraft</em>. I hope you enjoy! </p>
+        </div>
+        <img class="imageborder" src="images/wow.jpg" alt="World of Warcraft Cookbook opened on Conjured Mana Strudel page"/>
         <ul>
             <li><a href="recipes/brownies.html">Dalaran Brownies</a></li>
             <li><a href="recipes/strudel.html">Conjured Mana Strudel</a></li>
